@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-10 02:24";
+char cvsdate[]="2004-06-12 00:28";
